<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inicio"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/Desejado"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/a_jogar" />
        <item
            android:id="@+id/Ajogar"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/desejado" />
        <item
            android:id="@+id/concluido"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/concluido" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/baseline_games_24"
            android:title="@string/noticias" />
    </group>
    <group android:id="@+id/group_logout">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/sair" />
    </group>
</menu>
