<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.gamevault.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.gamevault.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.gamevault.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_im_playing"
        android:name="com.example.gamevault.ui.ImPlaying.ImPlaying"
        android:label="ImPlaying"
        tools:layout="@layout/fragment_im_playing" />

    <fragment
        android:id="@+id/nav_want_to_playing"
        android:name="com.example.gamevault.ui.WantToPlay.WantToPlayFragment"
        android:label="WantToPlay"
        tools:layout="@layout/fragment_want_to_play" />

    <fragment
        android:id="@+id/nav_Ive_played"
        android:name="com.example.gamevault.ui.IvePlayed.IvePlayedFragment"
        android:label="IvaPlayed"
        tools:layout="@layout/fragment_ive_played" />

    <fragment
        android:id="@+id/nav_AddGame"
        android:name="com.example.gamevault.ui.AddGame.AddGameFragment"
        android:label="AddGame"
        tools:layout="@layout/fragment_add_game" />
</navigation>